[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpumem"
version = "0.1.0"
description = "GPU memory compression test utilities"
authors = [{name = "Ryan mckenna"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "torch",
    "cupy",
    "numpy"
]

[project.scripts]
# none

[tool.setuptools.package-data]
"gpumem" = []
